# qadence2-expressions

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  examples.py  mkdocs.yml  pyproject.toml  renovate.json  versions.json
.github/workflows/: rust-tests.yml  test.yml
docs/: index.md  sample_page.md
docs/api/: constructors.md  environment.md  expressions.md  support.md
docs/contents/: expression_system.md  ir_compilation.md  useful_functions.md
docs/extras/overrides/: home.html
docs/getting_started/: CONTRIBUTING.md  LICENSE.md  installation.md
docs/tutorials/: index.md
examples/: example_tools.py  examples.ipynb  examples.py  platform_parse.py
qadence2_expressions/: __init__.py  collect.py  constructors.py  environment.py  expression.py  functions.py  ircompiler.py  main.py  operators.py  replace.py  support.py
qadence2_expressions/core/: __init__.py  constructors.py  environment.py  expression.py  ircompiler.py  primitives.py  support.py  utils.py
qadence2_expressions/expr/: __init__.py  expr.py  expr2.py  qsymbol.py  qubit_support.py
qadence2_expressions/transform/: __init__.py  collect.py  evaluate.py  functions.py  replace.py
src/: __init__.py  expression.rs  lib.rs  libs.rs  main.rs  operator.rs  symbols.rs
src/expr/: expr.py  qsymbol.py
src/tools/: collect.py  evaluate.py  functions.py  replace.py
src/transform/: __init__.py  collect.py  replace.py
tests/: conftest.py  test_collect.py  test_constructors.py  test_environment.py  test_expr2.py  test_expression.py  test_functions.py  test_ir_compilation.py  test_main.py  test_operators.py  test_qsymbol.py  test_qubit_support.py  test_replace.py  test_support.py  test_utils.py
v0.1.1/: 404.html  index.html
v0.1.1/getting_started/CODE_OF_CONDUCT/: index.html
v0.1.1/getting_started/CONTRIBUTING/: index.html
v0.1.1/getting_started/LICENSE/: index.html
v0.1.1/sample_page/: index.html
v0.1.1/search/: search_index.json
v0.1.2/: 404.html  index.html
v0.1.2/getting_started/CODE_OF_CONDUCT/: index.html
v0.1.2/getting_started/CONTRIBUTING/: index.html
v0.1.2/getting_started/LICENSE/: index.html
v0.1.2/sample_page/: index.html
v0.1.2/search/: search_index.json
v0.1.3/: 404.html  index.html
v0.1.3/getting_started/CODE_OF_CONDUCT/: index.html
v0.1.3/getting_started/CONTRIBUTING/: index.html
v0.1.3/getting_started/LICENSE/: index.html
v0.1.3/sample_page/: index.html
v0.2.0/: 404.html  index.html  objects.inv
v0.2.0/api/constructors/: index.html
v0.2.0/api/environment/: index.html
v0.2.0/api/expressions/: index.html
v0.2.0/api/support/: index.html
v0.2.0/contents/expression_system/: index.html
v0.2.0/contents/ir_compilation/: index.html
v0.2.0/contents/useful_functions/: index.html
v0.2.0/getting_started/CODE_OF_CONDUCT/: index.html
v0.2.0/getting_started/CONTRIBUTING/: index.html
v0.2.0/getting_started/LICENSE/: index.html
v0.2.0/getting_started/installation/: index.html
v0.2.0/tutorials/: index.html
v0.3.0/: 404.html  index.html
v0.3.0/api/constructors/: index.html
v0.3.0/api/environment/: index.html
v0.3.0/api/expressions/: index.html
v0.3.0/api/support/: index.html
v0.3.0/contents/expression_system/: index.html
v0.3.0/contents/ir_compilation/: index.html
v0.3.0/contents/useful_functions/: index.html
v0.3.0/getting_started/CODE_OF_CONDUCT/: index.html
v0.3.0/getting_started/CONTRIBUTING/: index.html
v0.3.0/getting_started/LICENSE/: index.html
v0.3.0/getting_started/installation/: index.html
v0.3.0/search/: search_index.json
v0.3.0/tutorials/: index.html
